# nlp1

./: .gitignore  README.md  app.py  language_codes.py  language_detector.py  package_requirements.txt  pyproject.toml
static/css/: style.css
static/js/: script.js
templates/: 404.html  500.html  cli_info.html  index.html  layout.html
